# telegram-automod-cpp

./: .clang  .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: Parser.h
src/: Parser.cpp  main.cpp
